tests/run/error_duplicate_type.out
tests/run/error_duplicate_type.em:5:1: error: a type with this name is already declared in this module
